--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <form role="form" action="/" method="post">
 
       <label for="firstname" tabindex="0">First name</label>
-      <input type="text" name="firstname" placeholder="Enter first name" tabindex="0"/>
+      <input type="text" id="firstname" placeholder="Enter first name" tabindex="0"/>
 
       <label for="email" tabindex="0">Email</label>
-      <input type="email" name="email" placeholder="Enter email" tabindex="0"/>
+      <input type="email" id="email" placeholder="Enter email" tabindex="0"/>
 
       <label for="password" tabindex="0">Password</label>
-      <input type="password" placeholder="Enter password" tabindex="0"/>
+      <input type="password" id="password" placeholder="Enter password" tabindex="0"/>
 
       <button type="submit" tabindex="0"/>
         Submit
