--- a/index.html
+++ b/index.html
@@ -6,33 +6,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Messy Site</title>
-  <link rel="stylesheet" href="style.css" class="rel">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <header role="banner">
+  <header role="banner" tabindex="0">
     <h1>I Love Coding</h1>
-    <img src="./catonkeyboard.jpeg" alt="cat lying on a keyboard"/>
+    <img src="./catonkeyboard.jpeg" alt="cat lying on a keyboard" />
   </header>
 
   <main role="main">
-
-    <article role="article">
+    <article role="article" tabindex="0">
       <header>
         <h2>First Section Header</h2>
       </header>
       <p>
-        Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
     </article>
 
-    <article role="article">
+    <article role="article" tabindex="0">
       <header>
         <h2>Second Section Header</h2>
       </header>
@@ -42,30 +39,25 @@
     </article>
 
     <form role="form" action="/" method="post">
+      <label for="formName" >First name</label>
+      <input type="text" id="formName" name="given-name" placeholder="Enter first name" required autocomplete="given-name" />
 
-      <label for="firstname" tabindex="0">First name</label>
-      <input type="text" id="firstname" placeholder="Enter first name" tabindex="0"/>
+      <label for="formEmail">Email</label>
+      <input type="email" id="formEmail" name="email" placeholder="Enter email" required autocomplete="email" />
 
-      <label for="email" tabindex="0">Email</label>
-      <input type="email" id="email" placeholder="Enter email" tabindex="0"/>
+      <label for="formPassword">Password</label>
+      <input type="password" id="formPassword" name="password" placeholder="Enter password" required />
 
-      <label for="password" tabindex="0">Password</label>
-      <input type="password" id="password" placeholder="Enter password" tabindex="0"/>
-
-      <button type="submit" tabindex="0"/>
-        Submit
-      </button>
-
+      <button type="submit"/>Submit</button>
     </form>
-
   </main>
 
-  <footer role="contentinfo">
+  <footer role="contentinfo" tabindex="0">
     <blockquote>
-      <cite>"Lorem ipsum dolor sit amet,consectetur adipiscing elit."</cite>
-      John Smith, 2017
+      <p>"Lorem ipsum dolor sit amet,consectetur adipiscing elit."</p>
+      <cite>John Smith, 2017</cite>
     </blockquote>
-    <div>Copyright John 2015. All rights reserved</div>
+    <p>Copyright John 2015. All rights reserved</p>
   </footer>
 
 </body>
